# grandata

./: .gitignore  Dockerfile  Makefile  README.md  part-00000-f1a31c88-7e9e-4b49-9657-c385597befb3-c000.gz.parquet  pyproject.toml
notebooks/: duckDB.ipynb  grandata.ipynb
